2009-10-20  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (autoloadModules): Pass -b to modprobe to obey blacklist
	files.
2009-10-19  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (checkRootFileSystem): Don't fail if /etc/fstab doesn't
	somehow have an entry for the root filesystem.
2009-07-23  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (main): --retry-failed is removed, use --type=failed instead.
2009-07-23  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (writeToFile): Give an empty string to the writeToFile
	function by default,
	* bin/mudur.py (checkRootFileSystem):
	- Refactor the function so that mudur calls sulogin when the root
	filesystem couldn't be mounted as read/write,
	- Call fsck with -y for trying to fix the filesystem in all cases when the
	fsck is forced,
	- Don't re re-mount read/only the root filesystem if fsck isn't forced
	through /forcefsck or /etc/fstab.
	* bin/mudur.py (mountRootFileSystem):
	- New function separated from checkRootFileSystem,
	- Guard against IOErrors when trying to write into /etc/mtab after
	mounting the root filesystem as read/write.
	* bin/mudur.py (UI.greet): Append '(Safe Mode)' string to the mudur's
	initial greeting message to distinguish between a normal and safe startup.

2009-07-02  Bahadır Kandemir <bahadir@pardus.org.tr>
	* bin/service.py: Open COMAR Link when necessary.

2009-06-26  Bahadır Kandemir <bahadir@pardus.org.tr>
	* bin/mudur.py: Reset all profile states before trying to connect network
	profiles.

2009-06-26  Bahadır Kandemir <bahadir@pardus.org.tr>
	* bin/mudur.py: Even simplest methods may reply after minutes on virtual
	machines, thus boot fails while bringing up network devices.

2009-06-26  H. İbrahim Güngör  <h.ibrahim.gungor@gmail.com>
	* bin/network.py: Show connection states

2009-06-10  Bahadır Kandemir <bahadir@pardus.org.tr>
	* bin/mudur.py: Clear previous connection states

2009-06-04  Bahadır Kandemir <bahadir@pardus.org.tr>
	* bin/service.py: Use comar.Link()
